--- a/log.html
+++ b/log.html
@@ -2074,25 +2074,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12833],[],[[4,0,0,[],[1,129,6002],[[0,5,6,0,7,8,0,0,[1,129,1927],[[129,2,9]]],[0,10,11,0,12,13,0,0,[1,2057,2001],[[4058,2,14]]],[0,15,6,0,16,0,0,0,[1,4058,2072],[]]]],[17,0,0,[],[1,6131,3249],[[0,5,6,0,7,18,0,0,[1,6131,1067],[[6131,2,19]]],[0,20,6,0,21,22,0,0,[1,7199,13],[]],[0,23,6,0,24,25,0,0,[1,7212,53],[[7213,2,26]]],[0,27,6,0,28,29,0,0,[1,7265,38],[[7265,2,30]]],[0,31,6,0,32,33,0,0,[1,7304,6],[[7310,2,34]]],[2,15,6,0,16,0,0,0,[1,7310,2070],[]]]],[35,0,0,[],[1,9381,3452],[[0,5,6,0,7,18,0,0,[1,9381,1084],[[9381,2,19]]],[0,23,6,0,24,36,0,0,[1,10466,75],[[10466,2,37]]],[0,23,6,0,24,38,0,0,[1,10541,38],[[10541,2,39]]],[0,23,6,0,24,40,0,0,[1,10579,37],[[10579,2,41]]],[0,23,6,0,24,42,0,0,[1,10616,35],[[10617,2,43]]],[0,23,6,0,24,44,0,0,[1,10652,36],[[10652,2,45]]],[0,27,6,0,28,29,0,0,[1,10688,37],[[10688,2,30]]],[0,46,6,0,47,48,0,0,[1,10726,2],[[10726,2,49]]],[0,50,6,0,51,52,0,0,[1,10728,38],[[10728,2,53]]],[0,54,6,0,55,56,0,0,[1,10766,9],[[10775,2,57]]],[2,15,6,0,16,0,0,0,[1,10775,2057],[]]]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4086],[],[[4,0,0,[],[1,135,3950],[[0,5,6,0,7,8,0,0,[1,136,1134],[[136,2,9]]],[0,10,6,0,11,12,0,0,[1,1270,62],[[1271,2,13]]],[0,10,6,0,11,14,0,0,[1,1333,37],[[1333,2,15]]],[0,16,6,0,17,18,0,0,[1,1370,34],[[1371,2,19]]],[0,20,6,0,21,22,0,0,[1,1404,618],[]],[0,23,6,0,24,0,0,0,[1,2023,2063],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test Gym Tracker","*E:\\MyCodingProject\\gym-tracker-client\\tests\\test_gym_tracker.robot","*tests/test_gym_tracker.robot","*Open Browser Smoke Test","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://example.com\">https://example.com\x3c/a>    chrome","*Opening browser 'chrome' to base url '<a href=\"https://example.com\">https://example.com\x3c/a>'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2s","*Slept 2 seconds.","*Close Browser","*<p>Closes the current browser.\x3c/p>","*Log Exercise With Only Exercise Field","*${URL}/logs    chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:5173/logs\">http://localhost:5173/logs\x3c/a>'.","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*name:exercise    5s","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*name:exercise    Deadlift","*Typing text 'Deadlift' into text field 'name:exercise'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*Log Exercise","*Clicking button 'Log Exercise'.","*Page Should Contain Element","*<p>Verifies that element <code>locator\x3c/code> is found on the current page.\x3c/p>","*name:weight","*Current page contains element 'name:weight'.","*Log Complete Exercise","*name:exercise    Bench Press","*Typing text 'Bench Press' into text field 'name:exercise'.","*name:weight    80","*Typing text '80' into text field 'name:weight'.","*name:reps    8","*Typing text '8' into text field 'name:reps'.","*name:sets    3","*Typing text '3' into text field 'name:sets'.","*name:date    10/11/2025","*Typing text '10/11/2025' into text field 'name:date'.","*Handle Alert","*<p>Handles the current alert and returns its message.\x3c/p>","*ACCEPT","*HANDLE::&lt;class 'NoneType'&gt;::None","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*${URL}/history","*Opening url '<a href=\"http://localhost:5173/history\">http://localhost:5173/history\x3c/a>'","*Page Should Contain","*<p>Verifies that current page contains <code>text\x3c/code>.\x3c/p>","*Bench Press","*Current page contains text 'Bench Press'."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*E:\\MyCodingProject\\gym-tracker-client\\tests\\authentication\\login.robot","*tests/authentication/login.robot","*Login Existing User","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL}/login    chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:5173/login\">http://localhost:5173/login\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${EMAIL_INPUT}    ${EMAIL}","*Typing text 'elmurmeli123+123456@gmail.com' into text field 'xpath=//*[@data-testid=\"email-input\"]'.","*${PASSWORD_INPUT}    ${PASSWORD}","*Typing text 'testi123' into text field 'xpath=//*[@data-testid=\"password-input\"]'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOGIN_BTN}","*Clicking button 'xpath=//*[@data-testid=\"login-btn\"]'.","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Logged in as:","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Test Gym Tracker","name":"Test Gym Tracker","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1762770344614;
+window.output["baseMillis"] = 1764067547075;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12846;
+window.output["generated"] = 4097;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
