--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12833],[],[[4,0,0,[],[1,129,6002],[]],[5,0,0,[],[1,6131,3249],[]],[6,0,0,[],[1,9381,3452],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4086],[],[[4,0,0,[],[1,135,3950],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test Gym Tracker","*E:\\MyCodingProject\\gym-tracker-client\\tests\\test_gym_tracker.robot","*tests/test_gym_tracker.robot","*Open Browser Smoke Test","*Log Exercise With Only Exercise Field","*Log Complete Exercise"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login","*E:\\MyCodingProject\\gym-tracker-client\\tests\\authentication\\login.robot","*tests/authentication/login.robot","*Login Existing User"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Test Gym Tracker","name":"Test Gym Tracker","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1762770344614;
+window.output["baseMillis"] = 1764067547075;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12846;
+window.output["generated"] = 4097;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
