Updated the robot tests to match the new navBar

--- a/log.html
+++ b/log.html
@@ -2074,25 +2074,25 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4086],[],[[4,0,0,[],[1,135,3950],[[0,5,6,0,7,8,0,0,[1,136,1134],[[136,2,9]]],[0,10,6,0,11,12,0,0,[1,1270,62],[[1271,2,13]]],[0,10,6,0,11,14,0,0,[1,1333,37],[[1333,2,15]]],[0,16,6,0,17,18,0,0,[1,1370,34],[[1371,2,19]]],[0,20,6,0,21,22,0,0,[1,1404,618],[]],[0,23,6,0,24,0,0,0,[1,2023,2063],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5188],[],[[4,0,0,[],[1,122,5065],[[0,5,6,0,7,8,9,0,[1,123,0],[[123,2,10]]],[0,11,12,0,13,14,0,0,[1,123,1156],[[123,2,15]]],[0,16,12,0,17,18,0,0,[1,1279,8],[]],[0,19,12,0,20,21,0,0,[1,1288,68],[[1288,2,22]]],[0,23,12,0,24,25,0,0,[1,1356,48],[[1356,2,26],[1375,2,27]]],[0,28,12,0,29,30,0,0,[1,1404,45],[[1404,2,31]]],[0,32,12,0,33,34,0,0,[1,1449,1638],[]],[0,35,12,0,36,0,0,0,[1,3087,2101],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*E:\\MyCodingProject\\gym-tracker-client\\tests\\authentication\\login.robot","*tests/authentication/login.robot","*Login Existing User","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL}/login    chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:5173/login\">http://localhost:5173/login\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${EMAIL_INPUT}    ${EMAIL}","*Typing text 'elmurmeli123+123456@gmail.com' into text field 'xpath=//*[@data-testid=\"email-input\"]'.","*${PASSWORD_INPUT}    ${PASSWORD}","*Typing text 'testi123' into text field 'xpath=//*[@data-testid=\"password-input\"]'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${LOGIN_BTN}","*Clicking button 'xpath=//*[@data-testid=\"login-btn\"]'.","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Logged in as:","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Register","*E:\\MyCodingProject\\gym-tracker-client\\tests\\authentication\\register.robot","*tests/authentication/register.robot","*Register New User","*Generate Random String","*String","*<p>Generates a string with a desired <code>length\x3c/code> from the given <code>chars\x3c/code>.\x3c/p>","*6    [LOWER]","*${random}","*${random} = mqecfl","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*${BASE_URL}/register    chrome","*Opening browser 'chrome' to base url '<a href=\"http://localhost:5173/register\">http://localhost:5173/register\x3c/a>'.","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*${EMAIL_INPUT}","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${EMAIL_INPUT}    elmurmeli123+${random}@gmail.com","*Typing text 'elmurmeli123+mqecfl@gmail.com' into text field 'xpath=//*[@data-testid=\"email-input\"]'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*${PASSWORD_INPUT}    MySecret123","*Typing password into text field 'xpath=//*[@data-testid=\"password-input\"]'.","*Temporally setting log level to: NONE","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*${REGISTER_BTN}","*Clicking button 'xpath=//*[@data-testid=\"register-btn\"]'.","*Wait Until Page Contains","*<p>Waits until <code>text\x3c/code> appears on the current page.\x3c/p>","*Registration successful!","*Close Browser","*<p>Closes the current browser.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Register","name":"Register","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1764067547075;
+window.output["baseMillis"] = 1764164932832;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4097;
+window.output["generated"] = 5199;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
