--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4086],[],[[4,0,0,[],[1,135,3950],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5188],[],[[4,0,0,[],[1,122,5065],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Login","*E:\\MyCodingProject\\gym-tracker-client\\tests\\authentication\\login.robot","*tests/authentication/login.robot","*Login Existing User"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Register","*E:\\MyCodingProject\\gym-tracker-client\\tests\\authentication\\register.robot","*tests/authentication/register.robot","*Register New User"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Login","name":"Login","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Register","name":"Register","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1764067547075;
+window.output["baseMillis"] = 1764164932832;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4097;
+window.output["generated"] = 5199;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
